--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="search">
-            <form action="" method="post">
+            <form netlify method="post">
                 <input type="search" name="buscar" placeholder="buscar">
             </form>
         </div>
